--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.1",
-    "lucide-react": "^0.556.0",
-    "@google/genai": "^1.31.0",
-    "react-dom": "^19.2.1",
-    "react-router-dom": "^7.10.1"
+    "react": "^19.2.3",
+    "lucide-react": "^0.561.0",
+    "react-dom": "^19.2.3",
+    "@google/genai": "^1.33.0",
+    "react-router-dom": "^7.10.1",
+    "firebase": "^12.6.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
